--- a/aula14.html
+++ b/aula14.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
+        <img id="banner" src="banner.jpg">
         <h1>Sobre a Barbearia Alura</h1>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
@@ -15,4 +18,4 @@
         <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
         O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     </body>
-</html>  
+</html> 
